--- a/index.html
+++ b/index.html
@@ -98,5 +98,5 @@
         <!-- Add your JS here -->
         
     </body>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </html>
